--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -12,4 +12,10 @@
     <string name="dont_have_account">Don\'t have account?</string>
     <string name="unable_to_update_profile">Unable to update profile: %1$s</string>
     <string name="permission_required">Access permission is required</string>
+    <string name="save">Save</string>
+    <string name="logout">Logout</string>
+    <string name="change_picture">Change Picture</string>
+    <string name="remove_picture">Remove Picture</string>
+    <string name="photo_removed_successfully">Photo Removed Successfully</string>
+    <string name="profile">Profile</string>
 </resources>
