--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -70,4 +70,5 @@
     <string name="view">View</string>
     <string name="failed_to_download">Failed to download file : %1$s</string>
     <string name="share_with">Share with..</string>
+    <string name="failed_to_fetch_friend_list">Failed to fetch friends list : %1$s</string>
 </resources>
