--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -71,4 +71,6 @@
     <string name="failed_to_download">Failed to download file : %1$s</string>
     <string name="share_with">Share with..</string>
     <string name="failed_to_fetch_friend_list">Failed to fetch friends list : %1$s</string>
+    <string name="failed_to_save_device_token">Failed to save device token : $1%s</string>
+    <string name="failed_to_send_notification">Failed to send notification : %1$s</string>
 </resources>
